--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -28,7 +28,7 @@ const { title, photo, Content } = Astro.props;
         <div class="card-actions justify-end">
           <div class="tooltip" data-tip="More about me">
             <a
-              href="https://linkedin.com/in/lauroguedes"
+              href="https://linkedin.com/in/yossrikhalil"
               target="_blank"
               class="btn btn-primary"
             >
