add more logos and some empty blogs

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,20 +6,13 @@ import { MessageCircleCode, Pickaxe } from "@lucide/astro";
   <aside>
     <MessageCircleCode class="inline-block size-20" />
     <p class="max-w-xl m-auto text-lg">
-      Want to chat? shoot me a dm <a
-        href="https://x.com/leowg"
+      Want to chat? Send me a message on <a
+        href="https://www.linkedin.com/in/yossrikhalil/"
         target="_blank"
+        rel="noopener noreferrer"
         class="link link-hover text-primary"
-        >with a direct question on X (twitter)</a
+        >LinkedIn</a
       > and I'll respond whenever I can.
-    </p>
-    <p class="text-base-content/60">
-      Copyright © {new Date().getFullYear()} - Crafted by an Artisan <a
-        class="link"
-        href="https://lauroguedes.dev"
-        target="_blank"
-        ><Pickaxe class="size-3 inline-block mr-1" />Lauro Guedes</a
-      >
     </p>
   </aside>
 </footer>
