--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,8 @@ const { name, title, description, avatar, location, socialLinks } = Astro.props;
     </div>
     <div class="max-w-2xl">
       <h1 class="text-5xl font-bold mb-4">
-        Hi, I'm {name}
+        {/* Hi, I'm {name} */}
+        Welcome to Las Vegas
       </h1>
       <p class="text-xl text-base-content/80 mb-2">{title}</p>
       {location && <p class="text-base-content/60 mb-4">{location}</p>}
